--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:text="Írás"
-            android:id="@+id/IrasBtn"/>
+            android:id="@+id/irasBtn"/>
     </LinearLayout>
 
     <TextView
