--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,13 @@
             android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10sp"
+            android:textSize="25sp"
             android:text="Fej"
             android:id="@+id/fejBtn"/>
         <Button
             android:layout_width="200sp"
             android:layout_height="wrap_content"
+            android:textSize="25sp"
             android:text="Írás"
             android:id="@+id/irasBtn"/>
     </LinearLayout>
